eslint fixes for all project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "no-param-reassign": "off",
     "no-restricted-syntax": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "import/order": "off",
+    "no-plusplus": "off"
   }
 }
